# teachverse-auth

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api.md  architecture.md  examples.md  security.md
src/teachverse_auth/: cli.py  main.py
src/teachverse_auth/api/: admin.py  auth.py  permissions.py  roles.py  services.py  users.py
src/teachverse_auth/core/: __init__.py  config.py  exceptions.py
src/teachverse_auth/data/: defaults.py
src/teachverse_auth/dependencies/: auth.py  pagination.py
src/teachverse_auth/models/: __init__.py  user.py
src/teachverse_auth/services/: permission_service.py  registration.py
teachverse_auth/: __init__.py  main.py
teachverse_auth/api/: admin.py  auth.py  permissions.py
teachverse_auth/core/: config.py  database.py  security.py
teachverse_auth/dependencies/: auth.py
teachverse_auth/models/: organization.py  permission.py  role.py
teachverse_auth/services/: permission_service.py
tests/: conftest.py  test_api.py  test_auth.py  test_cli.py  test_config.py  test_imports.py  test_main.py  test_permissions.py  test_services.py
